--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "browser-module-sandbox": "^1.4.0",
     "browser-request": "~0.3.1",
     "concat-stream": "1.0.0",
-    "detective": "~2.1.2",
+    "detective": "^3.1.0",
     "element-class": "0.0.2",
     "github-api": "0.7.0",
     "github-oauth": "0.0.4",
     "iframe": "^0.3.1",
-    "javascript-editor": "~0.2.1",
+    "javascript-editor-esprima": "^1.0.1",
     "jsonp": "0.0.3",
     "keydown": "~0.0.3",
     "nets": "^1.0.0"
