--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "create programs in the browser using modules from NPM",
   "scripts": {
-    "start": "beefy embed.js:embed-bundle.js index.js:bundle.js -p 5000",
+    "start": "node server.js",
     "build": "browserify embed.js -o embed-bundle.js && browserify embed2.js -o embed-bundle-v2.js && browserify index.js -o bundle.js --debug",
     "minify": "cat bundle.js | uglifyjs -o bundle.js",
     "modifyconfig": "sed -i '.bak' 's/envs.dev/envs.production/' config.js && rm config.js.bak",
@@ -37,6 +37,7 @@
     "concat-stream": "1.0.0",
     "detective": "^3.1.0",
     "element-class": "0.0.2",
+    "express": "^4.13.4",
     "github-api": "0.7.0",
     "github-oauth": "0.0.4",
     "iframe": "^0.3.1",
