--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "git@github.com:maxogden/requirebin.git"
   },
   "dependencies": {
+    "brace": "^0.7.0",
     "browser-module-sandbox": "^1.4.0",
     "browser-request": "~0.3.1",
     "concat-stream": "1.0.0",
@@ -43,6 +44,7 @@
     "github-oauth": "0.0.4",
     "iframe": "^0.3.1",
     "javascript-editor-esprima": "^1.0.1",
+    "jshint": "^2.9.1",
     "jsonp": "0.0.3",
     "keydown": "~0.0.3",
     "nets": "^1.0.0"
