--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
   },
   "dependencies": {
     "brace": "^0.7.0",
+    "browser-module-cache": "^0.1.3",
     "browser-module-sandbox": "^1.4.0",
-    "browser-request": "~0.3.1",
+    "browser-request": "^0.3.3",
     "concat-stream": "1.0.0",
     "detective": "^3.1.0",
     "element-class": "0.0.2",
+    "events": "^1.1.0",
     "express": "^4.13.4",
     "github-api": "0.7.0",
     "github-oauth": "0.0.4",
     "iframe": "^0.3.1",
+    "inherits": "^2.0.1",
     "javascript-editor-esprima": "^1.0.1",
     "jshint": "^2.9.1",
     "jsonp": "0.0.3",
