--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "github-api": "0.7.0",
     "github-oauth": "0.0.4",
     "iframe": "^0.3.1",
+    "iframe-console": "^0.1.5",
     "inherits": "^2.0.1",
     "javascript-editor-esprima": "^1.0.1",
     "jshint": "^2.9.1",
