--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "minify": "cat bundle.js | uglifyjs -o bundle.js",
     "modifyconfig": "sed -i '.bak' 's/envs.dev/envs.production/' config.js && rm config.js.bak",
     "deploy": "standard && gh-pages-deploy",
-    "dev": "beefy embed.js:embed-bundle.js index.js:bundle.js -p 5000",
+    "dev": "beefy embed.js:embed-bundle.js index.js:bundle.js -p 5000 --live",
     "test": "standard"
   },
   "gh-pages-deploy": {
