--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "express": "^4.13.4",
     "github-api": "0.7.0",
     "github-oauth": "0.0.4",
-    "iframe": "^0.3.1",
-    "iframe-console": "^0.1.5",
+    "iframe": "git://github.com/npm-dom/iframe.git",
+    "iframe-console": "^0.1.6",
     "inherits": "^2.0.1",
     "javascript-editor-esprima": "^1.0.1",
     "jshint": "^2.9.1",
