--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "git@github.com:maxogden/requirebin.git"
   },
   "dependencies": {
+    "auto-yield": "^0.2.0",
     "brace": "^0.7.0",
     "browser-module-cache": "^0.1.3",
     "browser-module-sandbox": "^1.4.0",
@@ -57,8 +58,8 @@
     "node": ">=0.8.x"
   },
   "devDependencies": {
-    "beefy": "~0.4.0",
-    "browserify": "~2.23.1",
+    "beefy": "^2.1.6",
+    "browserify": "^13.0.0",
     "codemirror": "^5.0.0",
     "extend": "^2.0.0",
     "gh-pages-deploy": "^0.3.0",
