--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "element-class": "0.0.2",
     "events": "^1.1.0",
     "express": "^4.13.4",
-    "github-api": "0.7.0",
+    "github-api": "^0.11.2",
     "github-oauth": "0.0.4",
     "iframe": "git://github.com/npm-dom/iframe.git",
     "iframe-console": "^0.1.9",
