--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "browserify embed.js -o embed-bundle.js && browserify embed2.js -o embed-bundle-v2.js && browserify index.js -o bundle.js --debug",
     "minify": "cat bundle.js | uglifyjs -o bundle.js",
     "modifyconfig": "sed -i '.bak' 's/envs.dev/envs.production/' config.js && rm config.js.bak",
-    "deploy": "standard && npm run modifyconfig && npm run build && npm run minify && git push heroku master",
+    "pre-deploy": "standard && npm run modifyconfig && npm run build && npm run minify",
+    "deploy": "git push heroku master",
     "dev": "beefy embed.js:embed-bundle.js index.js:bundle.js -p 5000 --live",
     "test": "standard"
   },
