--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "brace": "^0.7.0",
     "browser-module-cache": "^0.1.3",
     "browser-module-sandbox": "^1.4.0",
-    "browser-request": "^0.3.3",
     "concat-stream": "1.0.0",
     "detective": "^4.3.1",
     "element-class": "0.0.2",
@@ -47,7 +46,8 @@
     "jshint": "^2.9.1",
     "jsonp": "0.0.3",
     "keydown-with-event": "^0.1.2",
-    "nets": "^1.0.0"
+    "nets": "^1.0.0",
+    "request": "^2.75.0"
   },
   "engines": {
     "node": ">=0.8.x"
