--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "auto-yield": "^0.2.3",
+    "babel-polyfill": "^6.23.0",
     "brace": "^0.7.0",
     "browser-module-cache": "^0.1.3",
     "browser-module-sandbox": "^1.4.0",
@@ -38,19 +39,14 @@
     "events": "^1.1.0",
     "express": "^4.13.4",
     "github-api": "^0.11.2",
-    "github-oauth": "0.0.4",
     "iframe": "git://github.com/npm-dom/iframe.git",
     "iframe-console": "^0.1.9",
     "inherits": "^2.0.1",
-    "javascript-editor-esprima": "^1.0.1",
     "jshint": "^2.9.1",
     "jsonp": "0.0.3",
     "keydown-with-event": "^0.1.2",
     "nets": "^1.0.0",
     "request": "^2.75.0"
-  },
-  "engines": {
-    "node": ">=0.8.x"
   },
   "devDependencies": {
     "beefy": "^2.1.6",
